Np 46909 remove brage handles from root level (#1680)
* NP-46909-remove-brage-handles-from-root-level, using PublicationRepresentation in order to keep a trusted source for bragehandle.

* NP-46909-remove-brage-handles-from-root-level, wip

* NP-46909-remove-brage-handles-from-root-level, not overwrite associated artefact for nva publications with null handle.

* NP-46909-remove-brage-handles-from-root-level, codacy

* NP-46909-remove-brage-handles-from-root-level, code-review