@@ -2,16 +2,20 @@ package cucumber.features;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.Matchers.samePropertyValuesAs;
 import cucumber.ScenarioContext;
 import io.cucumber.java.en.And;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
 import java.net.URI;
+import java.util.HashSet;
 import java.util.List;
+import no.unit.nva.model.AdditionalIdentifier;
 import no.unit.nva.model.associatedartifacts.AssociatedArtifactList;
 import no.unit.nva.model.associatedartifacts.file.PublishedFile;
 import nva.commons.core.StringUtils;
@@ -38,7 +42,10 @@ public class FileMergerFeatures {
     @Given("a brage publication with handle {string}")
     public void bragePublicationWithHandle(String handle) {
         var bragePublication = scenarioContext.getBragePublication();
-        bragePublication.setHandle(createHandleFromCandidate(handle));
+        bragePublication.brageRecord().setId(createHandleFromCandidate(handle));
+        var additionalIdentifiers = new HashSet<>(bragePublication.publication().getAdditionalIdentifiers());
+        additionalIdentifiers.add(new AdditionalIdentifier("handle", handle));
+        bragePublication.publication().setAdditionalIdentifiers(additionalIdentifiers);
     }
 
     @And("the nva publication has main handle {string}")
@@ -50,7 +57,7 @@ public class FileMergerFeatures {
     @And("the brage publication has a file with values:")
     public void bragePublicationHasAFileWithValues(PublishedFile publishedFile) {
         var bragePublication = scenarioContext.getBragePublication();
-        bragePublication.setAssociatedArtifacts(new AssociatedArtifactList(List.of(publishedFile)));
+        bragePublication.publication().setAssociatedArtifacts(new AssociatedArtifactList(List.of(publishedFile)));
     }
 
     @And("the nva publication has a file with values:")
@@ -64,7 +71,7 @@ public class FileMergerFeatures {
         var mergedPublication = scenarioContext.getMergedPublication();
         var associatedArtifacts = mergedPublication.getAssociatedArtifacts();
         assertThat(associatedArtifacts, hasSize(1));
-        var associatedArtifact = associatedArtifacts.get(0);
+        var associatedArtifact = associatedArtifacts.getFirst();
         assertThat(associatedArtifact, is(instanceOf(PublishedFile.class)));
         var actualPublishedFile = (PublishedFile) associatedArtifact;
         assertThat(actualPublishedFile, is(samePropertyValuesAs(publishedFile)));
@@ -76,10 +83,10 @@ public class FileMergerFeatures {
         nvaPublication.setHandle(createHandleFromCandidate(handle));
     }
 
-    @And("the merged nva publication has a handle equal to {string}")
+    @And("the merged nva publication has a handle equal to {string} in additional identifiers")
     public void mergedNvaPublicationHasAHandleEqualTo(String handle) {
         var mergedPublication = scenarioContext.getMergedPublication();
-        assertThat(mergedPublication.getHandle(), is(equalTo(UriWrapper.fromUri(handle).getUri())));
+        assertThat(mergedPublication.getAdditionalIdentifiers(), hasItem(new AdditionalIdentifier("handle", handle)));
     }
 
     @And("the nva publication has no associatedArtifacts")
@@ -91,7 +98,19 @@ public class FileMergerFeatures {
     @And("the brage publication has no associated artifacts")
     public void bragePublicationHasNoAssociatedArtifacts() {
         var bragePublication = scenarioContext.getBragePublication();
-        bragePublication.setAssociatedArtifacts(new AssociatedArtifactList());
+        bragePublication.publication().setAssociatedArtifacts(new AssociatedArtifactList());
+    }
+
+    @And("the merged nva publication has a root level handle equal to {string}")
+    public void theMergedNvaPublicationHasARootLevelHandleEqualTo(String handle) {
+        var mergedPublication = scenarioContext.getMergedPublication();
+        assertThat(mergedPublication.getHandle().toString(), equalTo(handle) );
+    }
+
+    @And("the merged nva publication has a null handle")
+    public void theMergedNvaPublicationHasANullHandle() {
+        var mergedPublication = scenarioContext.getMergedPublication();
+        assertThat(mergedPublication.getHandle(), is(nullValue()));
     }
 
     private static URI createHandleFromCandidate(String candidate) {
